--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -92,8 +92,8 @@
                                     <tbody>
                                         {% for cart_item in cart_items%}
                                         <tr>
-                                            <td><a href="#">{{cart_item.product.name}}</a></td>
-                                            <td>Rs. {{cart_item.product.price}}</td>
+                                            <td><a href="#">{{cart_item.product.name}} * {{ cart_item.quantity }}</a></td>
+                                            <td>Rs. {{cart_item.sub_total}}</td>
                                         </tr>
                                         {% endfor %}
 
