--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -152,8 +152,14 @@
 
                         <div class="dropdown-cart-action">
                             <a href="{% url 'cart:cart' %}" class="btn btn-primary">View Cart</a>
+                            {% if user.is_authenticated %}
                             <a href="{% url 'cart:checkout' %}" class="btn btn-outline-primary-2"><span>Checkout</span><i
                                     class="icon-long-arrow-right"></i></a>
+                            {% else %}
+                            <a href="#signin-modal"data-toggle="modal" class="btn btn-outline-primary-2"><span>Checkout</span><i
+                                class="icon-long-arrow-right"></i></a>
+                                {% endif %}
+
                         </div><!-- End .dropdown-cart-total -->
                     </div><!-- End .dropdown-menu -->
                 </div><!-- End .cart-dropdown -->
