--- a/orders/templates/orders/payments.html
+++ b/orders/templates/orders/payments.html
@@ -184,8 +184,7 @@
         })
             .then((response) => response.json())
             .then((data) => {
-                alert("saved");
-                // window.location.href = redirect_url + '?order_number=' + data.order_number + '&payment_id=' + data.transID;
+                window.location.href = redirect_url + '?order_number=' + data.order_number + '&payment_id=' + data.transID;
             });
     }
 
