--- a/templates/modal/signin.html
+++ b/templates/modal/signin.html
@@ -2,6 +2,8 @@
 <!-- {% load socialaccount %} -->
 <!-- {% providers_media_js %} -->
 <!-- Sign in / Register Modal -->
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=1731712226874269&autoLogAppEvents=1" nonce="RCEcxcBp"></script>
 <div class="modal fade" id="signin-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -61,11 +63,15 @@
                                             </a>
                                         </div><!-- End .col-6 -->
                                         <div class="col-sm-6">
-                                            <a href="#" class="btn btn-login btn-f">
+                                            <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-login btn-f">
                                                 <i class="icon-facebook-f"></i>
                                                 Login With Facebook
                                             </a>
                                         </div><!-- End .col-6 -->
+
+                                        <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
+
+
                                     </div><!-- End .row -->
                                 </div><!-- End .form-choice -->
                             </div><!-- .End .tab-pane -->
