--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -76,6 +76,31 @@
                     {#    {% endif %} #}
                     {#  </p> #}
                 
+                    <div class="container">
+                        <div class="cat-blocks-container">
+                            <div class="row">
+                                {% if category %}
+                                {% for category in category %}
+                                <div class="col-6 col-sm-4 col-lg-2">
+                                    
+                                    <a href="{% url 'category:products_by_category' category.slug %}" class="cat-block">
+                                        <figure>
+                                            <span>
+                                                <img src="{{category.image.url}}" alt="Category image">
+                                            </span>
+                                        </figure>
+        
+                                        <h3 class="cat-block-title">{{category.name}}</h3><!-- End .cat-block-title -->
+                                    </a>
+                                    
+                                </div><!-- End .col-sm-4 col-lg-2 -->
+                                {% endfor %}
+                                {% endif %}
+                            </div><!-- End .row -->
+                        </div><!-- End .cat-blocks-container -->
+                        
+                    </div><!-- End .container -->
+                    
                 <div class="cat-blocks-container">
                     <div class="row">
                         {% for category in categories %}
