--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -15,19 +15,23 @@
                             }
                         }
                     }'>
-                    <div class="intro-slide" style="background-image: url({% static 'assets/images/demos/demo-4/slider/slide-1.png' %});">
+                    {% if promotions %}
+                    {% for promotion in promotions %}
+                    <div class="intro-slide" style="background-image: url({{promotion.image.url}});">
                         <div class="container intro-content">
                             <div class="row justify-content-end">
                                 <div class="col-auto col-sm-7 col-md-6 col-lg-5">
                                     <h3 class="intro-subtitle text-third">Deals and Promotions</h3><!-- End .h3 intro-subtitle -->
-                                    <h1 class="intro-title">Beats by</h1>
-                                    <h1 class="intro-title">Dre Studio 3</h1><!-- End .intro-title -->
+                                    <h1 class="intro-title">{{promotion.product.name}}</h1>
 
                                     <div class="intro-price">
-                                        <sup class="intro-old-price">$349,95</sup>
+                                        {% if discounted_price%}
+                                        <sup class="intro-old-price">Rs. {{promotion.product.price}}</sup>
+                                        {% if discounted_price%}
                                         <span class="text-third">
-                                            $279<sup>.99</sup>
+                                            Rs. {{promotion.discounted_price}} 
                                         </span>
+                                        {% endif %}
                                     </div><!-- End .intro-price -->
 
                                     <a href="category.html" class="btn btn-primary btn-round">
@@ -38,30 +42,9 @@
                             </div><!-- End .row -->
                         </div><!-- End .intro-content -->
                     </div><!-- End .intro-slide -->
-
-                    <div class="intro-slide" style="background-image: url({% static 'assets/images/demos/demo-4/slider/slide-2.png' %});">
-                        <div class="container intro-content">
-                            <div class="row justify-content-end">
-                                <div class="col-auto col-sm-7 col-md-6 col-lg-5">
-                                    <h3 class="intro-subtitle text-primary">New Arrival</h3><!-- End .h3 intro-subtitle -->
-                                    <h1 class="intro-title">Apple iPad Pro <br>12.9 Inch, 64GB </h1><!-- End .intro-title -->
-
-                                    <div class="intro-price">
-                                        <sup>Today:</sup>
-                                        <span class="text-primary">
-                                            $999<sup>.99</sup>
-                                        </span>
-                                    </div><!-- End .intro-price -->
-
-                                    <a href="category.html" class="btn btn-primary btn-round">
-                                        <span>Shop More</span>
-                                        <i class="icon-long-arrow-right"></i>
-                                    </a>
-                                </div><!-- End .col-md-6 offset-md-6 -->
-                            </div><!-- End .row -->
-                        </div><!-- End .intro-content -->
-                    </div><!-- End .intro-slide -->
-                </div><!-- End .intro-slider owl-carousel owl-simple -->
+                    {% endfor %}
+                    {% endif %}
+                     </div><!-- End .intro-slider owl-carousel owl-simple -->
 
                 <span class="slider-loader"></span><!-- End .slider-loader -->
             </div><!-- End .intro-slider-container -->
